Changes for 1.8.1

 - [ZBX-1624] fixed template linkage popup, when all templates are selected by default (Vedmak)
 - [ZBX-1604] extended maintenance period info messages (Aly)
 - [ZBX-1647] removed respection of host availabilities on maps (Aly)
 - [ZBX-1495] fixed map level label location (Aly)
 - [ZBX-1629] added coloring of items in trigger configuration screen (Aly)
 - [ZBX-979] host mass update templates now only link new teplates (Vedmak)
 - [ZBX-1642] fixed possibility of editing read only host items (Vedmak)
 - [ZBX-1242] fixed adding macro in triggers editing form (Aly)
 - [ZBX-1589] fixed no permission error when try to edit host form from search screen (Vedmak)
 - [ZBX-1561] fixed errors when view event info as admin user (Vedmak)
 - [ZBX-954] fixed item property reference when adding log item with type other than "log" (Richlv)
 - [ZBX-1493] fixed disabled host icon view (Aly)
 - [ZBX-1546] fixed processing link triggers on map (Aly)
 - [ZBX-1476] fixed host links in map (Aly)
 - [ZBX-1605] fixed map with host element under maintenance (Aly)
 - [ZBX-1507] fixed userid added instead of ip for some audit actions (Vedmak)
 - [ZBX-1563] fixed error when view history for log type item (Vedmak)
 - [ZBX-1556] fixed importing graphs with items that does not exist in system (Vedmak)
 - [ZBX-1515] fixed json encode/decode with mb overload enabled (Aly)
 - [ZBX-1623] fixed no proxy listed when admin edits host (Vedmak)
 - [ZBX-1456] fixed map update on linkage properties change (Aly)
 - [ZBX-1625] when mass update hosts, defaul "connect to" option is set to IP (Vedmak)
 - [ZBX-1479] fixed host mass update (Vedmak)
 - [ZBX-1628] removed templates from status of triggers screen (Aly)
 - [ZBX-1508] fixed action map creation (Aly)
 - [ZBX-1593] fixed errors when admin tries to add hostgroup editin host (Vedmak)
 - [ZBX-1621] fixed ITservices graphs text dispaying (Vedmak)
 - [ZBX-1553] fixed host group mass activate\disable operation (Vedmak)